﻿-Added BeforePump and AfterPump.
-Added some additional documentation
-Updated handling for null target object - null will force the target object to become NO_TARGET_OBJECT
-Changed DBase m_TimescaleLocal to protected (from private)
-Fixed bug in DBase.TimescaleLocal where a set value less than zero was not caught
-Added note on DBase.Duration to help avoid confusion.
-Fixed bug where unsupported expressions were not handled and threw an exception in ExtractExpression
-Fixed EaseOutExpo and EaseInExpo incorrect formulas